--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#page-container {
+  height: 100vh;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+#page-content {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  margin-top: 32px;
+  /* padding-bottom: 100px; /* height of your footer
+  margin-bottom: 200px; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#page-footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
