--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
   overflow: hidden;
   display: block;
   position: relative;
-  margin-top: 32px;
+  background-color: #f2f3f8;
+  /* margin-top: 32px; */
   /* padding-bottom: 100px; /* height of your footer
   margin-bottom: 200px; */
 }
