temperorily changed the footer style to be easier to the eyes!

--- a/src/PageFooter.css
+++ b/src/PageFooter.css
@@ -3,5 +3,9 @@
 } */
 
 .footer-container {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #444342;
+}
+
+.footer-container * {
+    color: rgba(255, 255, 255, 0.8);
 }
