--- a/src/ScoreCards.css
+++ b/src/ScoreCards.css
@@ -1,20 +1,16 @@
 .card {
     text-align: center;
 }
-.card.papers {
-    /* background-color: #1890ff; */
+.card.papers > * {
     background-image: linear-gradient(to bottom right, #EB4886, #B855A4);
 }
-.card.citations {
-    /* background-color: #faad14; */
+.card.citations > * {
     background-image: linear-gradient(to bottom right, #875EC0, #5446BA);
 }
-.card.national {
-    /* background-color: #ff4d4f; */
+.card.national > * {
     background-image: linear-gradient(to bottom right, #46C5F1, #6592DA);
 }
-.card.international {
-    /* background-color: #64b144; */
+.card.international > * {
     background-image: linear-gradient(to bottom right, #FFB92D, #F5805A);
 }
 .card .ant-typography {
